[package]
name = "rsquant"
version = "0.1.0"
edition = "2021"
authors = ["Changfeng Lou<louchangfeng@outlook.com>"]


[[bin]]
bench = false
path = "crates/bin/main.rs"
name = "rsquant"

[workspace]
members = [
    "crates/binan_spot",
    "crates/api",
    "crates/config",
    "crates/core",
    "crates/db",
    "crates/email",
    "crates/indicator",
    "crates/log",
    "crates/model",
    "crates/util",
]

[workspace.dependencies]
log = "0.4.18"
tracing = "0.1.40"
chrono = "0.4.26"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.56"
actix = { version = "0.13.1", features = ["macros"] }
tokio = { version = "1.26.0", features = ["time", "rt-multi-thread", "macros"] }


[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
actix = { workspace = true }

binan_spot = { path = "crates/binan_spot", features = ["full"] }
quant_api = { path = "crates/api" }
quant_config = { path = "crates/config" }
quant_core = { path = "crates/core" }
quant_db = { path = "crates/db" }
quant_email = { path = "crates/email" }
quant_indicator = { path = "crates/indicator" }
quant_log = { path = "crates/log" }
quant_model = { path = "crates/model" }
quant_util = { path = "crates/util" }

clokwerk = "0.4.0"
actix-web = { version = "4.3.1", features = ["macros", "rustls"] }
crossbeam-channel = "0.5.11"

[profile.release]
panic = 'abort'
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
