[package]
name = "rsquant"
version = "0.1.4"
edition = "2021"
authors = ["Changfeng Lou<louchangfeng@outlook.com>"]


[[bin]]
bench = false
path = "crates/bin/main.rs"
name = "rsquant"

[workspace]
members = [
    "deps/binan_spot",
    # "deps/binan_spot_examples",
    "crates/core",
    "crates/trade",
]

[workspace.dependencies]
log = "0.4.18"
tracing = "0.1.40"
chrono = "0.4.26"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.56"
actix = { version = "0.13.1", features = ["macros"] }
actix-web = "4.6.0"
tokio = { version = "1.26.0", features = ["time", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "tracing-log",
] }
rust_decimal = "1.34.3"
fast-float = "0.2.0"

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
actix = { workspace = true }
actix-web = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }

binan_spot = { path = "deps/binan_spot", features = ["full"] }
quant_core = { path = "crates/core" }
quant_trade = { path = "crates/trade" }
crossbeam-channel = "0.5.11"
futures-util = "0.3.30"
clap = { version = "4.5.1", features = ["derive"] }
rust_decimal_macros = "1.34.2"

[profile.release]
panic = 'abort'
lto = true
strip = true
opt-level = 'z'
codegen-units = 1
