[package]
name = "test-binan-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance_spot_connector_rust = { path = "../binance_spot_connector_rust", features = [
    "full",
] }
env_logger = "0.10.0"
log = "0.4.17"
plotter = "0.1.0"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["time", "full"] }
