[package]
name = "quant_api"
version = "0.1.0"
edition = "2021"
authors = ["Changfeng Lou<louchangfeng@outlook.com>"]

[dependencies]
binan_spot = { path = "../binan_spot", features = [ "full" ] }
quant_util = { path = "../util" }
hyper = "0.14.25"
hyper-tls = "0.5.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["time", "full"] }
hyper-proxy = "0.9.1"
