[package]
name = "quant_api"
version = "0.1.0"
edition = "2021"
authors = ["Changfeng Lou<louchangfeng@outlook.com>"]

[dependencies]
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
actix = { workspace = true }

binan_spot = { path = "../../deps/binan_spot", features = ["full"] }
quant_core = { path = "../core" }

hyper = "0.14.25"
hyper-tls = "0.5.0"
hyper-proxy = "0.9.1"
