[package]
name = "binan_spot"
version = "1.0.0"
authors = ["Binance"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["enable-ureq", "enable-tungstenite"]
enable-hyper = ["hyper", "hyper-tls", "serde_json", "futures-util", "tokio"]
enable-ureq = ["ureq", "serde_json"]
enable-tungstenite = ["tungstenite"]
enable-tokio-tungstenite = ["tokio-tungstenite"]
full = ["enable-hyper", "enable-tungstenite", "enable-ureq", "enable-tokio-tungstenite"]

[dependencies]
hmac = "0.12.0"
log = "0.4.16"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
url = "2.2.2"
rust_decimal = "1.29.0"
http = "0.2.9"
strum = { version = "0.24", features = ["derive"] }
rsa = { version = "0.9.2", features = ["pkcs5"] }
rand = "0.8.5"
signature = "2.1.0"
base64 = "0.21.2"

# enable-ureq
ureq = { version = "2.6.0", optional = true }

# enable-hyper
hyper = { version = "0.14.16", features = ["full"], optional = true }
serde_json = { version = "1.0.96", optional = true }
hyper-tls = { version = "0.5.0", optional = true }
futures-util = { version = "0.3.28", optional = true }
tokio = { version = "1.28.2", features = ["time"], optional = true }

# enable-tungstenite
tungstenite = { version = "0.19.0", features = ["native-tls"], optional = true }

# enable-tokio-tungstenite
tokio-tungstenite = { version = "0.19.0", features = [
    "native-tls",
], optional = true }
hyper-proxy = "0.9.1"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
env_logger = "0.10.0"
tower = "0.4.12"
rust_decimal_macros = "1.29.0"
cargo-audit = "0.17.4"
