[package]
name = "quant_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quant_util = { path = "../util" }
log = "0.4.17"
toml = "0.7.4"
serde = { version = "1.0.156", features = ["derive"] }
