[package]
name = "quant_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }

quant_core = { path = "../core" }
quant_util = { path = "../util" }

toml = "0.7.4"
