[package]
name = "quant_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
serde_json = { workspace = true }

binan_spot = { path = "../../deps/binan_spot", features = ["full"] }

toml = "0.7.4"
lettre = "0.10"
diesel = { version = "2.1.0", features = ["postgres"] }
