[package]
name = "quant_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }

quant_config = { path = "../config" }
quant_model = { path = "../model" }
quant_util = { path = "../util" }

# rusqlite = "0.29.0"
diesel =  { version = "2.1.0", features = ["postgres"] }
