[package]
name = "quant_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }

quant_core = { path = "../core" }

diesel = { version = "2.1.0", features = ["postgres"] }
