[package]
name = "quant_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quant_util = { path = "../util" }
serde = { version = "1.0.156", features = ["derive"] }
diesel =  { version = "2.1.0", features = ["postgres", "chrono"] }
chrono = "0.4.26"
