[package]
name = "quant_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = { workspace = true }
fast-float = { workspace = true }

quant_util = { path = "../util" }

diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
