[package]
name = "rsquant-bt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

barter = { path = "../../deps/barter-rs" }
barter-data = "0.7.0"
barter-integration = "0.7.2"

tokio-stream = { version = "0.1.9", features = ["sync"] }
futures = "0.3.21"

uuid = { version = "1.8.0", features = ["v4", "serde"] }
parking_lot = "0.12.3"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
ta = "0.5.0"
