[package]
name = "quant_trade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-float = { workspace = true }

quant_core = { path = "../core" }

ta = "0.5.0"
polars = { version = "0.40.0", features = [
    "lazy",
    "temporal",
    "describe",
    "json",
    "parquet",
    "dtype-datetime",
    "diff",
] }
